--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   legacy_timeline_scrubber:
     path: ../
-  provider: ^6.0.5
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
